added routes for dalle and loudinary

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,5 @@
-MONGODB_URL=mongodb+srv://sphinx:bb7IcFJedTrXKKJh@cluster0.ssruai1.mongodb.net/?retryWrites=true&w=majority
+OPENAI_API_KEY="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"
+MONGODB_URL="mongodb+srv://sphinx:bb7IcFJedTrXKKJh@cluster0.ssruai1.mongodb.net/?retryWrites=true&w=majority"
+CLOUDINARY_CLOUD_NAME=dkopo5e6b
+CLOUDINARY_API_KEY=884326319731459
+CLOUDINARY_API_SECCRET=f7u7H_VLH7nWsfd7zgnor4-bVLI
